--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 27
@@ -38,4 +39,7 @@ dependencies {
 
     //Network and JSON
     implementation 'com.google.code.gson:gson:2.8.0'
+
+    //Firebase
+    implementation 'com.google.firebase:firebase-core:16.0.0'
 }
