--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     // Dependency Injection
     implementation 'com.google.dagger:dagger:2.13'
     implementation 'com.google.dagger:dagger-android-support:2.13'
-    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'junit:junit:4.12'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
     annotationProcessor "com.google.dagger:dagger-android-processor:2.13"
 
